--- a/styles.less
+++ b/styles.less
@@ -1,3 +1,27 @@
-﻿.question {
-    color: red;
+﻿.header, .footer {
+    background-color: #0054db;
+    background: linear-gradient(to bottom, #337ef5, #0054db);
+    padding: 60px 0 40px;
+    color: #FFF;
+}
+
+section {
+    padding: 30px 0;
+}
+
+.questions {
+    &__inner {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+}
+
+.call-details{
+    .answer-section {
+        width: 45%;
+        margin: 10px 20px;
+        display: flex;
+        flex-direction: column;
+    }
 }
